--- a/index.html
+++ b/index.html
@@ -1,1 +1,335 @@
+-
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <title>at what temperature do pipes freeze in coloma in Coloma | Murray Plumbing Technical Guide</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
+  <meta name="description" content="Technical reference on when pipes may freeze in Coloma, explaining exposure factors, diagnostic checks, and standards-aligned mitigation workflows.">
+  <meta name="geo.position" content="38.80762;-120.89855">
+  <meta name="geo.placename" content="Coloma, California">
+  <meta name="geo.region" content="US-CA">
+  <style>
+    :root { --text:#111; --muted:#444; --border:#d7d7d7; --bg:#fff; }
+    html, body { margin:0; padding:0; background:var(--bg); color:var(--text); font-family: Arial, Helvetica, sans-serif; line-height:1.55; }
+    body { display:block; }
+    header, main, footer { max-width: 800px; margin: 0 auto; padding: 20px; }
+    header { padding-top: 28px; padding-bottom: 10px; }
+    h1 { font-size: 28px; margin: 0 0 6px 0; letter-spacing: -0.2px; }
+    p { margin: 10px 0; }
+    .byline { margin: 0; color: var(--muted); font-size: 14px; }
+    article { padding: 6px 0 10px 0; }
+    section { margin: 18px 0; }
+    h2 { font-size: 18px; margin: 0 0 8px 0; }
+    dl { margin: 10px 0 0 0; padding: 0; }
+    dt { font-weight: 700; margin-top: 10px; }
+    dd { margin: 4px 0 0 0; color: var(--muted); }
+    .panel { border: 1px solid var(--border); border-radius: 10px; padding: 14px; }
+    .svg-wrap { margin-top: 12px; }
+    .note { color: var(--muted); }
+    table { width: 100%; border-collapse: collapse; margin-top: 10px; }
+    caption { text-align: left; font-weight: 700; margin-bottom: 8px; }
+    th, td { border: 1px solid var(--border); padding: 10px; vertical-align: top; }
+    thead th { background: #f7f7f7; }
+    footer { border-top: 1px solid var(--border); padding-top: 14px; color: var(--muted); font-size: 13px; }
+    a { color: inherit; text-decoration: underline; text-underline-offset: 2px; }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>at what temperature do pipes freeze in coloma in Coloma</h1>
+    <p class="byline">Technical Overview for Coloma Residents</p>
+  </header>
+
+  <main id="main">
+    <article>
+      <section aria-label="Introduction">
+        <h2>Introduction</h2>
+        <p>
+          The question of at what temperature pipes freeze in coloma describes a practical risk condition in water distribution systems: when heat loss from a pipe and its surrounding cavity becomes great enough that water can turn to ice and restrict flow. In building plumbing, freezing is less a single number than a combination of exposure, insulation continuity, air movement, and how long cold conditions persist around pipe runs.
+        </p>
+        <p>
+          In Coloma, residential layouts often include crawl spaces, exterior-wall chases, and utility runs that can be influenced by foothill terrain and seasonal weather patterns in El Dorado County. Older construction methods, retrofits over multiple decades, and mixed material systems can create localized cold points that behave differently than interior plumbing, making a site-specific evaluation important for understanding freeze susceptibility.
+        </p>
+      </section>
+
+      <section aria-label="Key Terminology">
+        <h2>Key Terminology</h2>
+        <dl>
+          <dt>Thermal exposure</dt>
+          <dd>Conditions that allow a pipe to lose heat to surrounding air or surfaces, including unheated cavities, exterior walls, and vented crawl spaces.</dd>
+
+          <dt>Pipe chase</dt>
+          <dd>An enclosed pathway used to route water lines through walls, floors, or ceilings; chase geometry and air leakage can influence temperature stability.</dd>
+
+          <dt>Freeze restriction</dt>
+          <dd>A partial or full blockage caused by ice formation inside a pipe, which can reduce flow and increase internal pressure during thaw cycles.</dd>
+
+          <dt>Air infiltration</dt>
+          <dd>Uncontrolled movement of outside air into building cavities through gaps, penetrations, and vents, often creating localized cold zones near plumbing.</dd>
+
+          <dt>Thaw management</dt>
+          <dd>Controlled warming and pressure relief practices intended to restore flow while reducing the chance of pipe rupture or joint failure.</dd>
+        </dl>
+      </section>
+
+      <section aria-label="Process and Diagnostics">
+        <h2>Process &amp; Diagnostics</h2>
+        <p>
+          A technical evaluation for freeze risk typically focuses on where pipes run, how they are separated from outdoor air, and whether insulation and sealing create a continuous thermal boundary. Diagnostics may include verifying pipe routing near exterior assemblies, observing airflow pathways in crawl spaces or garages, and checking for recurring cold spots associated with vents, foundation gaps, or uninsulated penetrations. When restrictions are suspected, assessment emphasizes pressure relief, controlled warming, and verification that fittings and joints remain intact after flow returns.
+        </p>
+
+        <div class="panel svg-wrap" role="group" aria-label="Service process diagram">
+          <svg width="100%" height="220" viewBox="0 0 760 220" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="procTitle procDesc">
+            <title id="procTitle">Freeze risk assessment and mitigation workflow</title>
+            <desc id="procDesc">A four-stage flow showing exposure review, vulnerability confirmation, mitigation action, and verification.</desc>
+
+            <rect x="14" y="20" width="170" height="70" rx="12" ry="12" fill="#ffffff" stroke="#d7d7d7"/>
+            <text x="28" y="46" font-size="14" font-family="Arial, Helvetica, sans-serif" fill="#111">Review exposure</text>
+            <text x="28" y="66" font-size="12" font-family="Arial, Helvetica, sans-serif" fill="#444">Identify runs near</text>
+            <text x="28" y="82" font-size="12" font-family="Arial, Helvetica, sans-serif" fill="#444">cold air pathways</text>
+
+            <rect x="204" y="20" width="170" height="70" rx="12" ry="12" fill="#ffffff" stroke="#d7d7d7"/>
+            <text x="218" y="46" font-size="14" font-family="Arial, Helvetica, sans-serif" fill="#111">Confirm vulnerability</text>
+            <text x="218" y="66" font-size="12" font-family="Arial, Helvetica, sans-serif" fill="#444">Check insulation,</text>
+            <text x="218" y="82" font-size="12" font-family="Arial, Helvetica, sans-serif" fill="#444">drafts, and routing</text>
+
+            <rect x="394" y="20" width="170" height="70" rx="12" ry="12" fill="#ffffff" stroke="#d7d7d7"/>
+            <text x="408" y="46" font-size="14" font-family="Arial, Helvetica, sans-serif" fill="#111">Apply mitigation</text>
+            <text x="408" y="66" font-size="12" font-family="Arial, Helvetica, sans-serif" fill="#444">Seal air leaks,</text>
+            <text x="408" y="82" font-size="12" font-family="Arial, Helvetica, sans-serif" fill="#444">insulate, manage thaw</text>
+
+            <rect x="584" y="20" width="162" height="70" rx="12" ry="12" fill="#ffffff" stroke="#d7d7d7"/>
+            <text x="598" y="46" font-size="14" font-family="Arial, Helvetica, sans-serif" fill="#111">Verify operation</text>
+            <text x="598" y="66" font-size="12" font-family="Arial, Helvetica, sans-serif" fill="#444">Restore flow,</text>
+            <text x="598" y="82" font-size="12" font-family="Arial, Helvetica, sans-serif" fill="#444">inspect for leaks</text>
+
+            <line x1="184" y1="55" x2="204" y2="55" stroke="#777" stroke-width="2"/>
+            <polygon points="204,55 196,50 196,60" fill="#777"/>
+            <line x1="374" y1="55" x2="394" y2="55" stroke="#777" stroke-width="2"/>
+            <polygon points="394,55 386,50 386,60" fill="#777"/>
+            <line x1="564" y1="55" x2="584" y2="55" stroke="#777" stroke-width="2"/>
+            <polygon points="584,55 576,50 576,60" fill="#777"/>
+
+            <rect x="14" y="116" width="732" height="86" rx="12" ry="12" fill="#ffffff" stroke="#d7d7d7"/>
+            <text x="28" y="145" font-size="13" font-family="Arial, Helvetica, sans-serif" fill="#111">Outcome focus:</text>
+            <text x="28" y="166" font-size="12" font-family="Arial, Helvetica, sans-serif" fill="#444">Reduce exposure-driven freezing conditions, preserve pipe integrity during thaw cycles, and align repairs with local inspection expectations.</text>
+          </svg>
+          <p class="note">
+            The workflow emphasizes exposure controls and verification, because freezing events can involve both restriction and post-thaw leak risk depending on system condition.
+          </p>
+        </div>
+      </section>
+
+      <section aria-label="Technical Standards and Local Context">
+        <h2>Technical Standards &amp; Local Context</h2>
+        <p>
+          Plumbing work associated with freeze-related restrictions is typically evaluated for safety, material compatibility, and suitability for the building assembly where the piping is routed. In practice, this includes ensuring access, maintaining appropriate separation from environmental drafts, and confirming that any repair work is consistent with inspection and permitting expectations used for water system modifications in the region.
+        </p>
+        <p>
+          A formal reference for permitting and building standards that may affect plumbing-related work in this area is maintained by the City of Sacramento Community Development Building division:
+          <a href="https://www.cityofsacramento.org/Community-Development/Building">Building standards and permitting reference for regional construction work</a>.
+        </p>
+      </section>
+
+      <section aria-label="Cost and Complexity Factors">
+        <h2>Cost &amp; Complexity Factors</h2>
+        <table>
+          <caption>Factors that influence complexity for freeze-related plumbing evaluation and remediation</caption>
+          <thead>
+            <tr>
+              <th scope="col">Factor</th>
+              <th scope="col">Why it matters</th>
+              <th scope="col">Typical technical considerations</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">Pipe location and access</th>
+              <td>Hidden or confined runs require careful verification and controlled warming.</td>
+              <td>Crawl spaces, exterior wall cavities, and tight chases may require access planning and airflow control.</td>
+            </tr>
+            <tr>
+              <th scope="row">Material and joint condition</th>
+              <td>Older systems may have fittings more sensitive to thermal cycling and pressure changes.</td>
+              <td>Mixed materials, legacy joints, and prior repairs can affect how a system behaves during restriction and thaw.</td>
+            </tr>
+            <tr>
+              <th scope="row">Air movement and insulation continuity</th>
+              <td>Draft pathways can create localized cold points even when indoor space is heated.</td>
+              <td>Penetration sealing, vented crawl space behavior, and insulation gaps are evaluated together rather than in isolation.</td>
+            </tr>
+            <tr>
+              <th scope="row">Post-thaw verification needs</th>
+              <td>Restored flow can reveal small leaks or weakened fittings that were not obvious during restriction.</td>
+              <td>Pressure behavior, fixture performance, and localized moisture checks help confirm system stability after recovery.</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <section aria-label="Common Questions">
+        <h2>Common Questions (FAQ)</h2>
+        <section class="panel" aria-label="FAQ item 1">
+          <h2>Do pipes freeze at 32 degrees in Coloma?</h2>
+          <p>
+            Water freezes at that point, but pipe freezing risk depends on sustained exposure and local conditions such as drafts, insulation gaps, and whether the pipe is routed through unheated spaces.
+          </p>
+        </section>
+
+        <section class="panel" aria-label="FAQ item 2">
+          <h2>Which parts of a Coloma home are most vulnerable to pipe freezing?</h2>
+          <p>
+            Pipes located in exterior walls, crawl spaces, garages, and cabinet voids near outside air pathways are commonly more vulnerable than interior runs, especially where air infiltration is present.
+          </p>
+        </section>
+
+        <section class="panel" aria-label="FAQ item 3">
+          <h2>What is the safest technical approach when a frozen pipe is suspected?</h2>
+          <p>
+            The safest approach emphasizes pressure relief, controlled warming without open flame, and post-thaw inspection to confirm that fittings and joints have not been compromised by thermal cycling.
+          </p>
+        </section>
+      </section>
+    </article>
+  </main>
+
+  <footer>
+    © 2026 Murray Plumbing · Serving Coloma, California
+  </footer>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Plumber",
+        "@id": "https://murrayplumbing.net/#murray-plumbing-coloma-at-what-temperature-do-pipes-freeze-in-coloma",
+        "inLanguage": "en-US",
+        "name": "Murray Plumbing",
+        "description": "Technical reference on when pipes may freeze in Coloma, explaining exposure factors, diagnostic checks, and standards-aligned mitigation workflows.",
+        "areaServed": "Coloma, California",
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 38.80762,
+          "longitude": -120.89855
+        },
+        "serviceArea": {
+          "@type": "GeoCircle",
+          "geoMidpoint": {
+            "@type": "GeoCoordinates",
+            "latitude": 38.80762,
+            "longitude": -120.89855
+          },
+          "geoRadius": 12000
+        },
+        "knowsAbout": [
+          "Freeze restriction diagnostics",
+          "Pipe routing and thermal exposure",
+          "Air infiltration and insulation continuity",
+          "Controlled thaw management",
+          "Post-thaw leak verification"
+        ],
+        "hasOfferCatalog": {
+          "@type": "OfferCatalog",
+          "name": "Service categories",
+          "itemListElement": [
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "at what temperature do pipes freeze in coloma"
+              }
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "Frozen pipe assessment and mitigation"
+              }
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "Leak checks after thaw cycles"
+              }
+            }
+          ]
+        },
+        "sameAs": [
+          "https://sites.google.com/view/at-what-temperature-do-pipes-f/home",
+          "https://www.murrayplumbing.net/pipe-freeze-temperature-coloma-ca-murray-plumbing/"
+        ],
+        "citation": "https://www.cityofsacramento.org/Community-Development/Building"
+      },
+      {
+        "@type": "FAQPage",
+        "inLanguage": "en-US",
+        "about": {
+          "@id": "https://murrayplumbing.net/#murray-plumbing-coloma-at-what-temperature-do-pipes-freeze-in-coloma"
+        },
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "Do pipes freeze at 32 degrees in Coloma?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Water freezes at that point, but pipe freezing risk depends on sustained exposure and local conditions such as drafts, insulation gaps, and whether the pipe is routed through unheated spaces."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Which parts of a Coloma home are most vulnerable to pipe freezing?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Pipes located in exterior walls, crawl spaces, garages, and cabinet voids near outside air pathways are commonly more vulnerable than interior runs, especially where air infiltration is present."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What is the safest technical approach when a frozen pipe is suspected?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "The safest approach emphasizes pressure relief, controlled warming without open flame, and post-thaw inspection to confirm that fittings and joints have not been compromised by thermal cycling."
+            }
+          }
+        ]
+      },
+      {
+        "@type": "HowTo",
+        "inLanguage": "en-US",
+        "name": "How at what temperature do pipes freeze in coloma Works in Coloma",
+        "about": {
+          "@id": "https://murrayplumbing.net/#murray-plumbing-coloma-at-what-temperature-do-pipes-freeze-in-coloma"
+        },
+        "step": [
+          {
+            "@type": "HowToStep",
+            "name": "Review exposure",
+            "text": "Identify pipe runs near exterior assemblies, vented crawl spaces, garage walls, or other areas where cold air movement can reach plumbing."
+          },
+          {
+            "@type": "HowToStep",
+            "name": "Confirm vulnerability",
+            "text": "Assess insulation continuity, air leakage pathways, and routing details to determine whether localized cold points can form around water lines."
+          },
+          {
+            "@type": "HowToStep",
+            "name": "Apply mitigation",
+            "text": "Reduce air infiltration and improve thermal protection, then manage any suspected restrictions using controlled warming and pressure relief practices."
+          },
+          {
+            "@type": "HowToStep",
+            "name": "Verify operation",
+            "text": "Restore flow and evaluate the system after thaw conditions to confirm stability, checking fittings and joints for signs of leakage or stress."
+          }
+        ]
+      }
+    ]
+  }
+  </script>
+</body>
+</html>
 
